# SocialPad

./: Makefile  README.md  compose.dev.yml
backend/: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
backend/socialpad/: backend.py  services.py  utils.py
backend/socialpad/api/: __init__.py  dependencies.py  endpoints.py
backend/socialpad/auth/: __init__.py  dependencies.py  endpoints.py  models.py  vkid.py
backend/socialpad/waatp/: config.py
docker/nginx/conf.d/: dev_proxy.conf
frontend/: .gitignore  package.json  pnpm-lock.yaml
frontend/apps/waatp/: README.md  package.json  pnpm-workspace.yaml
frontend/apps/waatp/common/: package.json  prettier.config.js  tsconfig.json
frontend/apps/waatp/common/src/: App.tsx  bridge.ts  index.ts  routes.ts
frontend/apps/waatp/common/src/panels/: Home.tsx
frontend/apps/waatp/miniapp/: eslint.config.js  index.html  package.json  prettier.config.js  tsconfig.app.json  vite.config.ts
frontend/apps/waatp/miniapp/src/: main.tsx
frontend/apps/waatp/standalone/: index.html  package.json  tsconfig.node.json  vite.config.ts
frontend/apps/waatp/standalone/src/: main.tsx
