[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "SocialPad"
description = "SocialPad Backend"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">= 3.12"
dynamic = ["version", "dependencies", "optional-dependencies"]

[tool.setuptools.packages.find]
include = ["socialpad"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
optional-dependencies.test = { file = ["tests/requirements.txt"] }

[tool.setuptools_scm]
root = ".."
